17861 FIX Prevent unnecessary scrollbars in dashboards on Firefox
On Firefox, some dashboards such as the "Problem dashboard" showed scrollbars by default.

To fix this the dimensions of dashboards are adapted, reducing the width of all dashboards by 14px, the height by 1px.

--- a/packages/cmk-frontend/src/themes/facelift/scss/_pages.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_pages.scss
@@ -232,10 +232,6 @@ body {
       > div.simplebar-track {
         background-color: $bg-color;
       }
-
-      body.dashboard & {
-        padding-bottom: 0;
-      }
     }
   }
 }
